# python-test

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  coverage.json  date.txt  file-test  jira-test  pyproject.toml  setup.cfg  template.json  test.txt
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: config.yml  report_problem.md  request_feature.md
.github/workflows/: cd-production.yaml  cd-staging.yaml  cd.yaml  ci.yaml  cicd.yaml  coverage.yaml  cron-badges.yaml  cron-coverage.yaml  cron-stale.yaml  cron-tasks.yaml  notify-cicd.yaml  notify-pr-dependabot.yaml  notify-pr.yaml  notify-slack.yaml  notify.yaml  publish-to-pypi.yaml  release.yaml  reusable-build-and-tests.yaml  reusable-build-test.yaml  reusable-codeql.yaml  reusable-dependency-review.yaml  reusable-notify.yaml  reusable-pre-commit.yaml  reusable-testings.yaml  run-pr-labeler.yaml  run-workflow-run.yaml  sidecar-pr-target.yaml  sidecar-workflow-run.yaml  siderun-pr-target.yaml  testings.yaml  update-pre-commit-action-02.yaml  update-pre-commit-action.yaml  workflow-run.yaml  workflow-tests.yaml
badges/: marketplace.json
src/pkg_15903/: README.md  __init__.py  cli.py  main.py  run.py
src/pkg_15903/configs/: constants.py  logger.py
src/pkg_15903/core/: cls_requests.py
src/pkg_15903/routers/: api.py  health.py  info.py  versions.py
src/pkg_15903/utils/: validation.py
tests/: test_run.py
